# CTS

./: .gitignore  CHANGELOG.md  README.md  cubical-create-alpha16-source.b64.part-check  cubical-create-alpha16-source.b64.part-check2  cubical-create-alpha16-source.b64.part00  cubical-create-alpha16-source.b64.part01  cubical-create-alpha16-source.b64.part02  cubical-create-alpha16-source.b64.part03  cubical-create-alpha16-source.b64.part04  cubical-create-alpha16-source.b64.part05  cubical-create-alpha16-source.b64.part06  cubical-create-alpha16-source.b64.part07  cubical-create-alpha16-source.b64.part08  io.github.retrofrost.CTS.yml  pyproject.toml  requirements.txt  run.py
alpha15-source/: part00  part01  part02  part03  part04  part05  part06
android/: README.md  apply_alpha8_patches.py  apply_alpha9_patches.py  apply_alpha9_timing_fix.py  apply_ci_patches.py  ci-build-trigger.txt  gradlew  settings.gradle.kts
comparison_studio/: __init__.py  app.py  baked_transform.py  card_relative_transform.py  csv_text_easy.py  data.py  deselect_fix.py  desktop_v2.py  direct_transform.py  easy_timing.py  easy_ui.py  exact_badge.py  exporter.py  final_runtime.py  illustrated_shadow_polish.py  illustrated_video_profile.py  interaction_runtime.py  iteration_fixes.py  layout_hotfix.py  live_transform.py  renderer.py  (+16 more)
cubical-create-native/: CMakeLists.txt  README.md
cubical-create-native/core/include/cubical/: project.hpp
cubical-create-native/core/src/: project.cpp
cubical-create-native/linux-gtk/: main.cpp
cubical-create-native/windows/: CubicalCreate.manifest  main.cpp
(+110 files in other folders)
