[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "comparison-timeline-studio"
version = "0.3.2"
description = "Model-based spreadsheet comparison video editor with soundtrack mixing"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "PySide6>=6.8,<7",
    "Pillow>=10.0",
    "openpyxl>=3.1",
]

[project.scripts]
comparison-timeline-studio = "comparison_studio.app:main"

[tool.setuptools.packages.find]
include = ["comparison_studio*"]
