cmake_minimum_required(VERSION 3.22)
project(CubicalCreateNative VERSION 0.1.0 LANGUAGES CXX)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)
add_library(cubical_core STATIC core/src/project.cpp)
target_include_directories(cubical_core PUBLIC core/include)
if(WIN32)
  add_executable(CubicalCreate WIN32 windows/main.cpp windows/CubicalCreate.manifest)
  target_link_libraries(CubicalCreate PRIVATE cubical_core comctl32 shell32 ole32 uuid)
  target_compile_definitions(CubicalCreate PRIVATE UNICODE _UNICODE NOMINMAX)
else()
  find_package(PkgConfig REQUIRED)
  pkg_check_modules(GTK4 REQUIRED IMPORTED_TARGET gtk4)
  add_executable(CubicalCreate linux-gtk/main.cpp)
  target_link_libraries(CubicalCreate PRIVATE cubical_core PkgConfig::GTK4)
endif()
install(TARGETS CubicalCreate RUNTIME DESTINATION bin)
